fix portrait image cropping

--- a/src/app/pages/home/home.scss
+++ b/src/app/pages/home/home.scss
@@ -5,9 +5,9 @@
 }
 
 ion-content::part(scroll) {
-	overflow: auto;
 	display: flex;
 	flex-direction: column;
+	overflow: auto;
 }
 
 ion-content.portrait-mode::part(scroll) {
@@ -15,43 +15,51 @@ ion-content.portrait-mode::part(scroll) {
 }
 
 .banner {
-	position: relative;
-	margin: 0;
-	padding: 0;
-	height: 50%;
-	min-height: 50%;
-	background-position: 50% 50%;
-	background-repeat: no-repeat;
-	background-size: cover;
 	flex-shrink: 0;
-}
-
-.banner .title-wrapper {
+	height: 50%;
+	margin: 0;
+	min-height: 50%;
+	padding: 0;
 	position: relative;
-	float: left;
-	top: 50%;
-	left: 50%;
-	transform: translate(-50%, -50%);
-	text-align: center;
+
+	.landscape-background-image {
+		background-position: 50% 50%;
+		background-repeat: no-repeat;
+		background-size: cover;
+		height: 100%;
+		left: 0;
+		position: absolute;
+		top: 0;
+		width: 100%;
+	}
+
+	.title-wrapper {
+		float: left;
+		left: 50%;
+		position: relative;
+		top: 50%;
+		text-align: center;
+		transform: translate(-50%, -50%);
+	}
 }
 
 .banner-title,
 .banner-subtitle {
+	background-color: var(--main-background-color);
+	color: #000;
 	font-family: var(--font-stack-home-banner);
 	font-size: calc(1.375rem + 2.15vw);
 	font-weight: normal;
 	line-height: 1.5;
-	color: #000;
-	background-color: var(--main-background-color);
+	margin: 1.2rem 1rem 1rem 1rem;
 	opacity: 0.8;
 	padding: 0 1rem;
-	margin: 1.2rem 1rem 1rem 1rem;
 }
 
 .banner-subtitle {
+	display: inline-block;
 	font-size: calc(1.25rem + 0.7vw);
 	font-style: italic;
-	display: inline-block;
 	margin-top: 0;
 }
 
@@ -59,85 +67,81 @@ ion-content.portrait-mode::part(scroll) {
 	display: flex;
 	flex-direction: column;
 	margin: 1.5rem 3rem 0 3rem;
+
+	.site-presentation {
+		margin: 0 auto 3rem auto;
+		max-width: 1000px;
+		text-align: center;
+	}
+
+	.content-grid-wrapper {
+		margin: 0 auto 3rem auto;
+		max-width: 1000px;
+	}
+
+	.footer {
+		margin: auto auto 0 auto;
+		max-width: 1000px;
+		padding: 0 0 1.5rem 0;
+		text-align: center;
+		width: 100%;
+	}
 }
 
-.text-content .site-presentation {
-	text-align: center;
-	max-width: 1000px;
-	margin: 0 auto 3rem auto;
-}
+.portrait-mode {
+	.banner {
+		height: 100%;
+		min-height: 100%;
+		min-width: 370px;
+		position: sticky;
+		top: 0;
+		width: 28.2%;
 
-.text-content .content-grid-wrapper {
-	margin: 0 auto 3rem auto;
-	max-width: 1000px;
-}
+		.portrait-image-wrapper > img {
+			display: block;
+			height: auto;
+			width: 100%;
+		}
 
-.text-content .footer {
-	text-align: center;
-	width: 100%;
-	max-width: 1000px;
-	margin: auto auto 0 auto;
-	padding: 0 0 1.5rem 0;
-}
+		&.image-on-right {
+			margin-right: auto;
+			order: 1;
+		}
+	}
 
-.text-content .footer p {
-	font-size: 1rem;
-	color: rgba(0, 0, 0, 0.6);
-}
+	.text-content {
+		max-width: 1000px;
 
-.portrait-mode .banner {
-	height: 100%;
-	min-height: 100%;
-	width: 28.2%;
-	min-width: 370px;
-	background-image: none !important;
-	background-color: var(--page-home-portrait-mode-background-color-below-image);
-	position: sticky;
-	top: 0;
-}
+		.site-presentation {
+			margin: 0 0 3rem 0;
+			text-align: left;
+		}
 
-.portrait-mode .banner > img {
-	width: 100%;
-	height: auto;
-}
+		.footer {
+			margin-left: 0;
+			margin-right: 0;
+			text-align: left;
+		}
+	}
 
-.portrait-mode .banner.image-on-right {
-	order: 1;
-	margin-right: auto;
-}
+	.site-title,
+	.site-subtitle {
+		color: #000;
+		font-family: var(--font-stack-home-banner);
+		font-size: 3.25rem;
+		font-weight: normal;
+		line-height: 1.25;
+		margin-top: 1.2rem;
+		margin-bottom: 1rem;
+		padding: 0 0 0.5rem 0;
+		text-align: left;
+	}
 
-.portrait-mode .text-content {
-	max-width: 1000px;
-}
-
-.portrait-mode .text-content .site-presentation {
-	text-align: left;
-	margin: 0 0 3rem 0;
-}
-
-.portrait-mode .site-title,
-.portrait-mode .site-subtitle {
-	font-family: var(--font-stack-home-banner);
-	font-size: 3.25rem;
-	font-weight: normal;
-	line-height: 1.25;
-	text-align: left;
-	color: #000;
-	padding: 0 0 0.5rem 0;
-	margin-top: 1.2rem;
-	margin-bottom: 1rem;
-}
-
-.portrait-mode .site-subtitle {
-	font-size: 2.25rem;
-	font-style: italic;
-	margin-top: -1rem;
-}
-
-.portrait-mode .text-content .footer {
-	margin-left: 0;
-	margin-right: 0;
-	text-align: left;
+	.site-subtitle {
+		font-size: 2.25rem;
+		font-style: italic;
+		margin-top: -1rem;
+	}
 }
 
 /* The following rules are adjustments for small screens. */
@@ -159,38 +163,58 @@ ion-content.portrait-mode::part(scroll) {
 		flex-direction: column;
 	}
 
-	.portrait-mode .banner {
-		order: 0;
-		height: auto;
-		min-height: auto;
-		width: 100%;
-		min-width: 100%;
-		position: relative;
-	}
+	.portrait-mode {
+		.banner {
+			height: auto;
+			min-height: auto;
+			min-width: 100%;
+			order: 0;
+			position: relative;
+			width: 100%;
 
-	.portrait-mode.title-on-image .banner .title-wrapper {
-		position: absolute;
-		width: max-content;
-		max-width: 100%;
-	}
+			.portrait-image-wrapper {
+				height: 0;
+				padding-top: 100%;
+				position: relative;
+				width: 100%;
+		
+				> img {
+					height: 100%;
+					object-fit: cover;
+					position: absolute;
+					top: 0;
+					width: 100%;
+				}
+			}
+		}
 
-	.portrait-mode.title-on-image .text-content .title-wrapper {
-		display: none;
-	}
+		&.title-on-image {
+			.banner .title-wrapper {
+				max-width: 100%;
+				position: absolute;
+				width: max-content;
+				z-index: 1;
+			}
 
-	.portrait-mode .text-content {
-		order: 1;
-	}
+			.text-content .title-wrapper {
+				display: none;
+			}
+		}
 
-	.portrait-mode .text-content .site-title {
-		font-size: 2.25rem;
-		margin-top: 0.5rem;
-		text-align: center;
-	}
+		.text-content {
+			order: 1;
 
-	.portrait-mode .text-content .site-subtitle {
-		font-size: 1.625rem;
-		text-align: center;
+			.site-title {
+				font-size: 2.25rem;
+				margin-top: 0.5rem;
+				text-align: center;
+			}
+
+			.site-subtitle {
+				font-size: 1.625rem;
+				text-align: center;
+			}
+		}
 	}
 }
 
